--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
-
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Samuel's Portfolio</title>
